// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Table /> AlignTableCellContentCenter story renders snapshot 1`] = `
<table
  class="table"
>
  <thead>
    <tr
      class="table-row table-row--header"
    >
      <th
        class="table__cell table__cell--align-center"
      >
        Name
      </th>
      <th
        class="table__cell table__cell--align-center"
      >
        Status
      </th>
      <th
        class="table__cell table__cell--align-center"
      >
        Chart
      </th>
      <th
        class="table__cell table__cell--align-center"
      >
        Window
      </th>
      <th
        class="table__cell table__cell--align-center"
      >
        Last Update
      </th>
    </tr>
  </thead>
  <tbody
    class="table__body"
  >
    <tr
      class="table-row"
    >
      <td
        class="table__cell table__cell--align-center"
        data-label="Name"
      >
        Table Row 1, Table Cell 1
      </td>
      <td
        class="table__cell table__cell--align-center"
        data-label="Status"
      >
        Table Row 1, Table Cell 2
      </td>
      <td
        class="table__cell table__cell--align-center"
        data-label="Chart"
      >
        Table Row 1, Table Cell 3
      </td>
      <td
        class="table__cell table__cell--align-center"
        data-label="Window"
      >
        Table Row 1, Table Cell 4
      </td>
      <td
        class="table__cell table__cell--align-center"
        data-label="Last Update"
      >
        Table Row 1, Table Cell 5
      </td>
    </tr>
    <tr
      class="table-row"
    >
      <td
        class="table__cell table__cell--align-center"
        data-label="Name"
      >
        Table Row 2, Table Cell 1
      </td>
      <td
        class="table__cell table__cell--align-center"
        data-label="Status"
      >
        Table Row 2, Table Cell 2
      </td>
      <td
        class="table__cell table__cell--align-center"
        data-label="Chart"
      >
        Table Row 2, Table Cell 3
      </td>
      <td
        class="table__cell table__cell--align-center"
        data-label="Window"
      >
        Table Row 2, Table Cell 4
      </td>
      <td
        class="table__cell table__cell--align-center"
        data-label="Last Update"
      >
        Table Row 2, Table Cell 5
      </td>
    </tr>
    <tr
      class="table-row"
    >
      <td
        class="table__cell table__cell--align-center"
        data-label="Name"
      >
        Table Row 3, Table Cell 1
      </td>
      <td
        class="table__cell table__cell--align-center"
        data-label="Status"
      >
        Table Row 3, Table Cell 2
      </td>
      <td
        class="table__cell table__cell--align-center"
        data-label="Chart"
      >
        Table Row 3, Table Cell 3
      </td>
      <td
        class="table__cell table__cell--align-center"
        data-label="Window"
      >
        Table Row 3, Table Cell 4
      </td>
      <td
        class="table__cell table__cell--align-center"
        data-label="Last Update"
      >
        Table Row 3, Table Cell 5
      </td>
    </tr>
    <tr
      class="table-row"
    >
      <td
        class="table__cell table__cell--align-center"
        data-label="Name"
      >
        Table Row 4, Table Cell 1
      </td>
      <td
        class="table__cell table__cell--align-center"
        data-label="Status"
      >
        Table Row 4, Table Cell 2
      </td>
      <td
        class="table__cell table__cell--align-center"
        data-label="Chart"
      >
        Table Row 4, Table Cell 3
      </td>
      <td
        class="table__cell table__cell--align-center"
        data-label="Window"
      >
        Table Row 4, Table Cell 4
      </td>
      <td
        class="table__cell table__cell--align-center"
        data-label="Last Update"
      >
        Table Row 4, Table Cell 5
      </td>
    </tr>
  </tbody>
</table>
`;

exports[`<Table /> AlignTableCellContentRight story renders snapshot 1`] = `
<table
  class="table"
>
  <thead>
    <tr
      class="table-row table-row--header"
    >
      <th
        class="table__cell table__cell--align-right"
      >
        Name
      </th>
      <th
        class="table__cell table__cell--align-right"
      >
        Status
      </th>
      <th
        class="table__cell table__cell--align-right"
      >
        Chart
      </th>
      <th
        class="table__cell table__cell--align-right"
      >
        Window
      </th>
      <th
        class="table__cell table__cell--align-right"
      >
        Last Update
      </th>
    </tr>
  </thead>
  <tbody
    class="table__body"
  >
    <tr
      class="table-row"
    >
      <td
        class="table__cell table__cell--align-right"
        data-label="Name"
      >
        Table Row 1, Table Cell 1
      </td>
      <td
        class="table__cell table__cell--align-right"
        data-label="Status"
      >
        Table Row 1, Table Cell 2
      </td>
      <td
        class="table__cell table__cell--align-right"
        data-label="Chart"
      >
        Table Row 1, Table Cell 3
      </td>
      <td
        class="table__cell table__cell--align-right"
        data-label="Window"
      >
        Table Row 1, Table Cell 4
      </td>
      <td
        class="table__cell table__cell--align-right"
        data-label="Last Update"
      >
        Table Row 1, Table Cell 5
      </td>
    </tr>
    <tr
      class="table-row"
    >
      <td
        class="table__cell table__cell--align-right"
        data-label="Name"
      >
        Table Row 2, Table Cell 1
      </td>
      <td
        class="table__cell table__cell--align-right"
        data-label="Status"
      >
        Table Row 2, Table Cell 2
      </td>
      <td
        class="table__cell table__cell--align-right"
        data-label="Chart"
      >
        Table Row 2, Table Cell 3
      </td>
      <td
        class="table__cell table__cell--align-right"
        data-label="Window"
      >
        Table Row 2, Table Cell 4
      </td>
      <td
        class="table__cell table__cell--align-right"
        data-label="Last Update"
      >
        Table Row 2, Table Cell 5
      </td>
    </tr>
    <tr
      class="table-row"
    >
      <td
        class="table__cell table__cell--align-right"
        data-label="Name"
      >
        Table Row 3, Table Cell 1
      </td>
      <td
        class="table__cell table__cell--align-right"
        data-label="Status"
      >
        Table Row 3, Table Cell 2
      </td>
      <td
        class="table__cell table__cell--align-right"
        data-label="Chart"
      >
        Table Row 3, Table Cell 3
      </td>
      <td
        class="table__cell table__cell--align-right"
        data-label="Window"
      >
        Table Row 3, Table Cell 4
      </td>
      <td
        class="table__cell table__cell--align-right"
        data-label="Last Update"
      >
        Table Row 3, Table Cell 5
      </td>
    </tr>
    <tr
      class="table-row"
    >
      <td
        class="table__cell table__cell--align-right"
        data-label="Name"
      >
        Table Row 4, Table Cell 1
      </td>
      <td
        class="table__cell table__cell--align-right"
        data-label="Status"
      >
        Table Row 4, Table Cell 2
      </td>
      <td
        class="table__cell table__cell--align-right"
        data-label="Chart"
      >
        Table Row 4, Table Cell 3
      </td>
      <td
        class="table__cell table__cell--align-right"
        data-label="Window"
      >
        Table Row 4, Table Cell 4
      </td>
      <td
        class="table__cell table__cell--align-right"
        data-label="Last Update"
      >
        Table Row 4, Table Cell 5
      </td>
    </tr>
  </tbody>
</table>
`;

exports[`<Table /> Default story renders snapshot 1`] = `
<table
  class="table"
>
  <thead>
    <tr
      class="table-row table-row--header"
    >
      <th
        class="table__cell"
      >
        Name
      </th>
      <th
        class="table__cell"
      >
        Status
      </th>
      <th
        class="table__cell"
      >
        Chart
      </th>
      <th
        class="table__cell"
      >
        Window
      </th>
      <th
        class="table__cell"
      >
        Last Update
      </th>
    </tr>
  </thead>
  <tbody
    class="table__body"
  >
    <tr
      class="table-row"
    >
      <td
        class="table__cell"
      >
        Table Row 1, Table Cell 1
      </td>
      <td
        class="table__cell"
      >
        Table Row 1, Table Cell 2
      </td>
      <td
        class="table__cell"
      >
        Table Row 1, Table Cell 3
      </td>
      <td
        class="table__cell"
      >
        Table Row 1, Table Cell 4
      </td>
      <td
        class="table__cell"
      >
        Table Row 1, Table Cell 5
      </td>
    </tr>
    <tr
      class="table-row"
    >
      <td
        class="table__cell"
      >
        Table Row 2, Table Cell 1
      </td>
      <td
        class="table__cell"
      >
        Table Row 2, Table Cell 2
      </td>
      <td
        class="table__cell"
      >
        Table Row 2, Table Cell 3
      </td>
      <td
        class="table__cell"
      >
        Table Row 2, Table Cell 4
      </td>
      <td
        class="table__cell"
      >
        Table Row 2, Table Cell 5
      </td>
    </tr>
    <tr
      class="table-row"
    >
      <td
        class="table__cell"
      >
        Table Row 3, Table Cell 1
      </td>
      <td
        class="table__cell"
      >
        Table Row 3, Table Cell 2
      </td>
      <td
        class="table__cell"
      >
        Table Row 3, Table Cell 3
      </td>
      <td
        class="table__cell"
      >
        Table Row 3, Table Cell 4
      </td>
      <td
        class="table__cell"
      >
        Table Row 3, Table Cell 5
      </td>
    </tr>
    <tr
      class="table-row"
    >
      <td
        class="table__cell"
      >
        Table Row 4, Table Cell 1
      </td>
      <td
        class="table__cell"
      >
        Table Row 4, Table Cell 2
      </td>
      <td
        class="table__cell"
      >
        Table Row 4, Table Cell 3
      </td>
      <td
        class="table__cell"
      >
        Table Row 4, Table Cell 4
      </td>
      <td
        class="table__cell"
      >
        Table Row 4, Table Cell 5
      </td>
    </tr>
  </tbody>
</table>
`;

exports[`<Table /> SortableInteractive story renders snapshot 1`] = `
<table
  class="table"
>
  <thead>
    <tr
      class="table-row table-row--header"
    >
      <th
        class="table-header-cell"
      >
        <button
          class="clickable-style clickable-style--link clickable-style--brand button button--link table-header-cell__sort-button"
          data-bootstrap-override="clickable-style-link"
          type="button"
        >
          Sortable
          <svg
            class="icon"
            fill="currentColor"
            height="1rem"
            role="img"
            style="--icon-size: 1rem;"
            width="1rem"
            xmlns="http://www.w3.org/2000/svg"
          >
            <title
              id="1"
            >
              Sort
            </title>
            <use
              xlink:href="test-file-stub#unfold-more"
            />
          </svg>
        </button>
      </th>
      <th
        class="table-header-cell"
      >
        Not sortable
      </th>
    </tr>
  </thead>
  <tbody
    class="table__body"
  >
    <tr
      class="table-row"
    >
      <td
        class="table__cell"
      >
        Value 1
      </td>
      <td
        class="table__cell"
      >
        Value A
      </td>
    </tr>
    <tr
      class="table-row"
    >
      <td
        class="table__cell"
      >
        Value 3
      </td>
      <td
        class="table__cell"
      >
        Value B
      </td>
    </tr>
    <tr
      class="table-row"
    >
      <td
        class="table__cell"
      >
        Value 2
      </td>
      <td
        class="table__cell"
      >
        Value C
      </td>
    </tr>
    <tr
      class="table-row"
    >
      <td
        class="table__cell"
      >
        Value 4
      </td>
      <td
        class="table__cell"
      >
        Value D
      </td>
    </tr>
  </tbody>
</table>
`;
